Apply overflow-wrap style rule to footer email address, to fix issue of email address spilling over to the next column when viewing on mobile screens due to the long string of text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,6 +440,10 @@ main {
     color:#66E6E6;
 }
 
+.footer-column #overflow {
+    overflow-wrap: break-word;
+}
+
 /* SOCIAL MEDIA LINKS */
 #socials {
     display: flex;
